# raytracer

./: CMakeLists.txt
include/: camera.h  image.h  intersection.h  object.h  objectconcept.h  objectmodel.h  ray.h  renderer.h  rtincludes.h  sphere.h  vec3.h
src/: camera.cpp  image.cpp  main.cpp  object.cpp  renderer.cpp  sphere.cpp
tests/: camera_tests.cpp  tests.cpp  vec3_tests.cpp
